--- a/templates/index/4.html
+++ b/templates/index/4.html
@@ -72,7 +72,7 @@
 							</li>
 							<li class="dropdown"><a href="#">Account</a>
 								<ul>
-									{% if request.user.is_authenicated %}
+									{% if request.user.is_authenticated %}
 										<li><a href="">Profile</li>
 										<li><a href="{% url 'account_logout' %}">Logout</a></li>
 									{% else %}
