added meta data

--- a/templates/assignments/dashboard.html
+++ b/templates/assignments/dashboard.html
@@ -1,4 +1,9 @@
 {% extends 'assignments/base.html' %}
+{% block meta %}
+    <meta name="title" content="GWD - Dashboard">
+    <meta name="keyword" content="GWD, Get Work Done, Dashboard, Referral Earnings, Withdrawals, Orders, Account Summary">
+    <meta name="description" content="Access your GWD Dashboard to get an overview of your account activity. See your referral earnings, withdrawal history, and orders on a single page. Stay updated with your account summary and earnings from referrals.">
+{% endblock %}
 {% block content %}
 
 <!-- Page Heading -->
