--- a/templates/assignments/orders.html
+++ b/templates/assignments/orders.html
@@ -1,4 +1,9 @@
 {% extends 'assignments/base.html' %}
+{% block meta %}
+    <meta name="title" content="GWD - Orders">
+    <meta name="keyword" content="GWD, Get Work Done, Orders, Order History, Project Orders, Assignment Orders">
+    <meta name="description" content="Access your GWD Orders page to view a list of all your project and assignment orders. Keep track of your order history, including unique order IDs, subject areas, titles, and durations. Stay organized and manage your projects and assignments efficiently.">
+{% endblock %}
 {% block content %}
     <div class="container-fluid">
         <!-- Content Row -->
