--- a/templates/assignments/referals.html
+++ b/templates/assignments/referals.html
@@ -1,4 +1,9 @@
 {% extends 'assignments/base.html' %}
+{% block meta %}
+    <meta name="title" content="GWD - Referrals Page">
+    <meta name="keyword" content="GWD, Get Work Done, Referrals, Earnings, Referral System, Referred Projects, Referred Users">
+    <meta name="description" content="View your referrals and earnings on the GWD platform. This page provides a list of the people and projects you have referred, along with the amount earned from each referral. Track your earnings and withdraw them directly from the platform using various payment methods.">
+{% endblock %}
 {% block content %}
     <div class="container-fluid">
         {% include 'assignments/partials/card.html' %}
