corrected text on the graphs

--- a/templates/assignments/dashboard.html
+++ b/templates/assignments/dashboard.html
@@ -34,8 +34,8 @@
                     <canvas id="myAreaChart"></canvas>
                 </div>
                 <hr>
-                Experience the power of 
-                <code>Technology for All</code> by VSTech Limited.
+                Get your
+                <code>Earnings Overview</code> for the last 12 Months.
             </div>
         </div>
     </div>
@@ -50,8 +50,8 @@
                     <canvas id="myBarChart" width="399" height="320" style="display: block; width: 399px; height: 320px;" class="chartjs-render-monitor"></canvas>
                 </div>
                 <hr>
-                Experience the power of 
-                <code>Technology for All</code> by VSTech Limited.
+                Get your 
+                <code>Withdrawings Overview</code> for the last Six Months.
             </div>
         </div>
     </div>
@@ -81,8 +81,8 @@
                     </span>
                 </div>
                 <hr>
-                Experience the power of 
-                <code>Technology for All</code> by VSTech Limited.
+                Get Summary on your
+                <code>Order History</code> at VSTech Limited.
             </div>
         </div>
     </div>
