--- a/templates/assignments/withdrawals.html
+++ b/templates/assignments/withdrawals.html
@@ -79,8 +79,8 @@
                         <canvas id="myBarChart" width="399" height="320" style="display: block; width: 399px; height: 320px;" class="chartjs-render-monitor"></canvas>
                     </div>
                     <hr>
-                    Experience the power of 
-                    <code>Technology for All</code> by VSTech Limited.
+                    Get your 
+                    <code>Withdrawings Overview</code> for the last Six Months.
                 </div>
             </div>
         </div>
