--- a/templates/assignments/earnings.html
+++ b/templates/assignments/earnings.html
@@ -70,8 +70,8 @@
                         <canvas id="myAreaChart"></canvas>
                     </div>
                     <hr>
-                    Experience the power of
-                    <code>Technology for All</code> by VSTech Limited.
+                    Get your
+                <code>Earnings Overview</code> for the last 12 Months.
                 </div>
             </div>
         </div>
