--- a/templates/assignments/dashboard.html
+++ b/templates/assignments/dashboard.html
@@ -10,9 +10,10 @@
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
     <div>
-    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-success shadow-sm" data-toggle="modal" data-target="#ProjectModel"><i class="fas fa-file-alt fa-sm text-white-50"></i> Leave a Project</a>
+    <a href="{% url 'ai:get_ideas' %}" class="d-none d-sm-inline-block btn btn-sm btn-warning shadow-sm"><i class="fas fa-lightbulb"></i> Get Ideas</a>
+    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-success shadow-sm" data-toggle="modal" data-target="#ProjectModel"><i class="fas fa-check-circle"></i> Leave a Project</a>
     <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-info shadow-sm" data-toggle="modal" data-target="#AssignmentModel"><i class="fas fa-file-alt fa-sm text-white-50"></i> Leave Assignment(s)</a>
-    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal" data-target="#getCode"><i class="fas fa-code fa-sm text-white-50"></i> Get Code</a>
+    <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm" data-toggle="modal" data-target="#getCode"><i class="fas fa-share"></i> Get Code</a>
     </div>
 </div>
 
