--- a/templates/index/3.html
+++ b/templates/index/3.html
@@ -92,20 +92,30 @@
 									<li><a href="{% url 'project:list' %}">Projects</a></li>
 									<li><a href="{% url 'users:team' %}">Team</a></li>
 									<li><a href="{% url 'testimonies' %}">Testimonial</a></li>
+									<li class="{% if title == 'Our Services' or category == 'services' %}current{% endif %}"><a href="{% url 'services:list' %}">Services</a></li>
 									<!-- <li><a href="page-pricing.html">Pricing</a></li>
 									<li><a href="page-pricing-switcher.html">Pricing Switcher</a></li> -->
 									<li><a href="{% url 'faq' %}">FAQ</a></li>
 									
 								</ul>
 							</li>
-							<li class="{% if title == 'Our Services' or category == 'services' %}current{% endif %}"><a href="{% url 'services:list' %}">Services</a></li>
 							<li class="{% if title == 'Your Ultimate Electronics Shop' or category == 'Our Shop' %}current{% endif %}"><a href="{% url 'shop:list' %}">Shop</a></li>
 							<li class="{% if title == 'Blogs' or category == 'Blogs > Test Category' %}current{% endif %}"><a href="{% url 'blog:list' %}">Blogs</a></li>
 							<li class="{% if title == 'Contact Us' %}current{% endif %}"><a href="{% url 'contact' %}">Contact</a></li>
 							<li class="dropdown {% if title == 'Generate Image' or title == 'Our Intelligent Chatbot' %}current{% endif %}"><a href="#">AI Tools</a>
 								<ul>
-									<li><a href="{% url 'ai:chat' %}">ChatBot</a></li>
+									<li><a href="https://vstechwebapp.azurewebsites.net/" target="_blank">ChatBot</a></li>
+									<li><a href="{% url 'ai:get_ideas' %}">Get Ideas</a></li>
 									<li><a href="{% url 'ai:desc_to_image' %}">Description to Image</a></li>									
+								</ul>
+							</li>
+							<li class="dropdown {% if title == 'Get Work Done' or title == 'Get Project Ideas' %}current{% endif %}"><a href="#">G.W.D</a>
+								<ul>
+									<li><a href="{% url 'gwd:index' %}">GWD Homepage</a></li>
+									<li><a href="{% url 'gwd:dashboard' %}">Dashboard</a></li>
+									<li><a href="{% url 'ai:get_ideas' %}">Get Ideas</a></li>
+									<li><a href="{% url 'gwd:leave_project' %}">Leave a Project</a></li>
+									<li><a href="{% url 'gwd:leave_assignment' %}">Leave Assignment</a></li>									
 								</ul>
 							</li>
 						</ul>
