--- a/templates/ai/get-ideas.html
+++ b/templates/ai/get-ideas.html
@@ -14,8 +14,13 @@
                     <!-- Contact Form -->
                     <div class="contact-form wow fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft;">
                         <div class="title-box">
-                            <span class="sub-title">Get Project Ideas</span>
-                            <h3>Get Started!</h3>
+                            <div class="d-flex align-items-center justify-content-between">
+                                <div>
+                                    <span class="sub-title">Get Project Ideas</span>
+                                    <h3>Get Started!</h3>
+                                </div>
+                                <h2 class="text-white my-2" id="idea-calculated-amount">Ksh. 0</h2>
+                            </div>
                         </div>
                        <!--Contact Form-->
                         <form method="post" action="" id="contact-form">
@@ -27,7 +32,7 @@
                                         <select name="level" id="academic_level" required>
                                             <option value="" selected>--------------</option>
                                             {% for level_choice in level_choices %}
-                                                <option value="{{ level_choice.id }}">{{ level_choice.title }}</option>
+                                                <option value="{{ level_choice.id }}" data-charge-rate="{{ level_choice.charge_rate }}">{{ level_choice.title }}</option>
                                             {% endfor %}
                                         </select>
                                     </div>
@@ -57,7 +62,7 @@
                                 <textarea name="description" placeholder="Provide optional details of the kind of ideas you need."></textarea>
                             </div>
                             <div class="form-group">
-                                <button class="theme-btn btn-style-one" type="submit" name="submit-form"><span class="btn-title">Get Ideas</span></button>
+                                <button class="theme-btn btn-style-one" id="button" type="submit" name="submit-form"><span class="btn-title">Get Ideas</span></button>
                             </div>
                         </form>
                     </div>
@@ -100,4 +105,59 @@
         <a href="{% url 'gwd:orders' %}" class="theme-btn btn-style-one shadow">View All Generated Ideas</a>
     </div>
 </section>
+{% endblock %}
+
+{% block js %}
+<script>
+    document.getElementById('number_of_ideas').addEventListener('keyup', function() {
+        var errorElement = document.getElementById('number_of_ideas_error');
+        var value = parseInt(this.value);
+        var button = document.getElementById("button")
+        if (isNaN(value) || value < 1 || value > 10) {
+            errorElement.textContent = 'Number must be between 1 and 10.';
+        } else {
+            errorElement.textContent = '';
+        }
+    });
+    function calculateideaAmount() {
+        const academicLevel = document.getElementById("academic_level");
+        const calculatedAmount = document.getElementById("idea-calculated-amount");
+    
+        const academicLevelChargeRate = getAcademicLevelChargeRate(
+            academicLevel.value
+        );
+
+        const numberOfIdeas = getNumberOfIdeas();
+    
+        if (!isNaN(academicLevelChargeRate) && !isNaN(numberOfIdeas)) {
+            const amount = 100 * academicLevelChargeRate * numberOfIdeas;
+            calculatedAmount.textContent = "Ksh. " + amount.toFixed(2);
+        } else {
+            calculatedAmount.textContent = "Ksh. 0";
+        }
+    }
+    
+    function getAcademicLevelChargeRate(academicLevelId) {
+        const academicLevelOption = document.querySelector(
+            `#academic_level [value="${academicLevelId}"]`
+        );
+        if (academicLevelOption) {
+            return parseFloat(academicLevelOption.getAttribute("data-charge-rate"));
+        }
+        return NaN;
+    }
+
+    function getNumberOfIdeas() {
+        const number_of_ideas = document.querySelector(`#number_of_ideas`);
+        if (number_of_ideas) {
+            return parseFloat(number_of_ideas.value);
+        }
+        return NaN;
+    }
+
+    document.getElementById("number_of_ideas").addEventListener("keyup", calculateideaAmount)
+    document.getElementById("academic_level").addEventListener("change", calculateideaAmount);
+    
+    calculateideaAmount();
+</script>
 {% endblock %}
