--- a/templates/assignments/dashboard.html
+++ b/templates/assignments/dashboard.html
@@ -91,12 +91,18 @@
 <div id="completed-count" data-count="{{ completed_orders }}"></div>
 <div id="cancelled-count" data-count="{{ cancelled_orders }}"></div>
 <div id="pending-count" data-count="{{ pending_orders }}"></div>
-
+<div class="d-none">
+        {% for month in label %}
+        <div id="data-month-{{ forloop.counter }}" data-months="{{ month }}"></div>
+        {% endfor %}
+        {% for dt in data %}
+        <div id="data-earnings-{{ forloop.counter }}" data-earnings="{{ dt }}"></div>
+        {% endfor %}
+</div>
 {% endblock %}
 
 {% block js %}
- <script src="/static/sb/js/demo/chart-area-demo.js"></script>
- <script src="/static/sb/js/demo/chart-bar-demo.js"></script>
+<script src="/static/sb/js/demo/chart-bar-demo.js"></script>
 <script>
     
 Chart.defaults.global.defaultFontFamily = 'Nunito', '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
@@ -140,4 +146,129 @@ var myPieChart = new Chart(ctx, {
   },
 });
 </script>
+<script>
+    Chart.defaults.global.defaultFontFamily = 'Nunito', '-apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif';
+    Chart.defaults.global.defaultFontColor = '#858796';
+    
+    function number_format(number, decimals, dec_point, thousands_sep) {
+      number = (number + '').replace(',', '').replace(' ', '');
+      var n = !isFinite(+number) ? 0 : +number,
+        prec = !isFinite(+decimals) ? 0 : Math.abs(decimals),
+        sep = (typeof thousands_sep === 'undefined') ? ',' : thousands_sep,
+        dec = (typeof dec_point === 'undefined') ? '.' : dec_point,
+        s = '',
+        toFixedFix = function(n, prec) {
+          var k = Math.pow(10, prec);
+          return '' + Math.round(n * k) / k;
+        };
+      s = (prec ? toFixedFix(n, prec) : '' + Math.round(n)).split('.');
+      if (s[0].length > 3) {
+        s[0] = s[0].replace(/\B(?=(?:\d{3})+(?!\d))/g, sep);
+      }
+      if ((s[1] || '').length < prec) {
+        s[1] = s[1] || '';
+        s[1] += new Array(prec - s[1].length + 1).join('0');
+      }
+      return s.join(dec);
+    }
+    var data = [];
+    var label = [];
+    for(var i=1; i<=12; i++){
+      data.push(parseFloat(document.getElementById("data-earnings-"+i.toString()).getAttribute("data-earnings")));
+      label.push(document.getElementById("data-month-"+i.toString()).getAttribute("data-months"));
+    }
+    console.log(typeof(data))
+    console.log(typeof(label))
+    console.log(data);
+    console.log(label);
+    // Area Chart Example
+    var ctx = document.getElementById("myAreaChart");
+    var myLineChart = new Chart(ctx, {
+      type: 'line',
+      data: {
+        labels: label,
+        datasets: [{
+          label: "Earnings",
+          lineTension: 0.3,
+          backgroundColor: "rgba(78, 115, 223, 0.05)",
+          borderColor: "rgba(78, 115, 223, 1)",
+          pointRadius: 3,
+          pointBackgroundColor: "rgba(78, 115, 223, 1)",
+          pointBorderColor: "rgba(78, 115, 223, 1)",
+          pointHoverRadius: 3,
+          pointHoverBackgroundColor: "rgba(78, 115, 223, 1)",
+          pointHoverBorderColor: "rgba(78, 115, 223, 1)",
+          pointHitRadius: 10,
+          pointBorderWidth: 2,
+          data: data,
+        }],
+      },
+      options: {
+        maintainAspectRatio: false,
+        layout: {
+          padding: {
+            left: 10,
+            right: 25,
+            top: 25,
+            bottom: 0
+          }
+        },
+        scales: {
+          xAxes: [{
+            time: {
+              unit: 'date'
+            },
+            gridLines: {
+              display: false,
+              drawBorder: false
+            },
+            ticks: {
+              maxTicksLimit: 7
+            }
+          }],
+          yAxes: [{
+            ticks: {
+              maxTicksLimit: 5,
+              padding: 10,
+              callback: function(value, index, values) {
+                return 'KSh.' + number_format(value);
+              }
+            },
+            gridLines: {
+              color: "rgb(234, 236, 244)",
+              zeroLineColor: "rgb(234, 236, 244)",
+              drawBorder: false,
+              borderDash: [2],
+              zeroLineBorderDash: [2]
+            }
+          }],
+        },
+        legend: {
+          display: false
+        },
+        tooltips: {
+          backgroundColor: "rgb(255,255,255)",
+          bodyFontColor: "#858796",
+          titleMarginBottom: 10,
+          titleFontColor: '#6e707e',
+          titleFontSize: 14,
+          borderColor: '#dddfeb',
+          borderWidth: 1,
+          xPadding: 15,
+          yPadding: 15,
+          displayColors: false,
+          intersect: false,
+          mode: 'index',
+          caretPadding: 10,
+          callbacks: {
+            label: function(tooltipItem, chart) {
+              var datasetLabel = chart.datasets[tooltipItem.datasetIndex].label || '';
+              return datasetLabel + ': KSh.' + number_format(tooltipItem.yLabel);
+            }
+          }
+        }
+      }
+    });
+    
+    </script>
 {% endblock %}
