--- a/templates/assignments/orders.html
+++ b/templates/assignments/orders.html
@@ -172,7 +172,7 @@
             </div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-bordered small">
+                    <table class="table table-bordered small" id="dataTable1" width="100%" cellspacing="0">
                         <thead>
                             <tr>
                                 <th><input type="checkbox" name="" id=""></th>
@@ -255,7 +255,7 @@
             </div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-bordered small">
+                    <table class="table table-bordered small" id="dataTable2" width="100%" cellspacing="0">
                         <thead>
                             <tr>
                                 <th><input type="checkbox" name="" id=""></th>
@@ -324,4 +324,15 @@
             </div>
         </div>
     </div>
+{% endblock %}
+{% block js %}
+<script>
+    $(document).ready(function() {
+        $('#dataTable1').DataTable();
+      });
+      $(document).ready(function() {
+        $('#dataTable2').DataTable();
+      });
+      
+</script>
 {% endblock %}
