--- a/templates/edu/base.html
+++ b/templates/edu/base.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="VSTech Academy, VSTech Limited, Student Notes, Free Access to Notes, Online Learning Platform, Study Resources, Educational App, Notes Sharing, Past Papers, Course Materials, Unit Notes, Study Community, Academic Resources, Exam Preparation, Collaborative Learning, Student Sign Up, Note Upload, Classmates Sharing, Online Study Hub, Learning Support, {% if notes %}{% for note in notes %}{{ note }}, {% endfor %}{% endif %}{% if schools %}{% for eschool in schools %}{{ eschool }}, {% endfor %}{% endif %}{% if units %}{% for unit in units %}{{ unit }}, {% endfor %}{% endif %}">
+    <meta name="description" content="Unlock the power of education with VSTech Academy by VSTech Limited. Get free access to comprehensive student notes, past papers, and unit materials. Join an engaged study community, upload your own notes, and facilitate knowledge sharing with classmates. Elevate your learning journey today.">
     <meta name="author" content="Jeff Odhiambo">
     <link rel="shortcut icon" href="/static/images/icon.png" type="image/x-icon">
     {% include 'partials/css.html' %}    
