--- a/templates/users/profile.html
+++ b/templates/users/profile.html
@@ -41,6 +41,7 @@
                     <ul class="text-left">
                         <li><a href="{% url 'account_change_password' %}" class="nav-link text-dark">Change Password</a></li>
                         <li><a href="{% url 'account_email' %}" class="nav-link text-dark">Manage Emails</a></li>
+                        <li><a href="{% url 'socialaccount_connections' %}" class="nav-link text-dark">Manage Connected Accounts</a></li>
                         <li><a href="{% url 'account_logout' %}" class="nav-link text-dark">Logout</a></li>
                     </ul>
                 </div>
