--- a/templates/edu/base.html
+++ b/templates/edu/base.html
@@ -22,6 +22,7 @@
 
 <body>
        {% include 'partials/top-nav.html' %}
+       {% include 'partials/messages.html' %}
         <div class="container-fluid bg-light py-4">
             <div class="container">
                 <div class="row">
