--- a/templates/edu/index.html
+++ b/templates/edu/index.html
@@ -1,7 +1,7 @@
 {% extends 'edu/base.html' %}
 {% block content %}
 
-<div class="d-flex justify-content-between bg-white p-2">
+<!-- <div class="d-flex justify-content-between bg-white p-2">
     <div class="wm-normal-btn">
         <a href="#" class="btn btn-sm bg-primary">Free</a>
         <a href="#" class="btn btn-sm btn-dark">Paid</a>
@@ -10,10 +10,13 @@
         <i class="fa fa-list" aria-hidden="true"></i>
        <i class="fa fa-th" aria-hidden="true"></i>
     </div>
-</div>
-<div class="d-flex justify-content-between align-items-center bg-white p-2">
+</div> -->
+<div class="d-flex justify-content-between align-items-center bg-white px-2 py-4">
     <h4 class="text-primary">{{ title }}</h4>
-    <a href="{% url 'edu:my-documents' %}" class="theme-btn btn-style-one">My Documents</a>
+    <div>
+        <a href="{% url 'edu:add_notes' %}" class="theme-btn btn-style-two">Add Notes</a>
+        <a href="{% url 'edu:my-documents' %}" class="theme-btn btn-style-one">My Notes</a>
+    </div>
 </div>
 <div class="col-lg-12">
     {% if notes %}
@@ -22,6 +25,7 @@
         <div class="news-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp animated"
             style="visibility: visible; animation-name: fadeInUp;">
             <div class="inner-box">
+                {% if note.file %}
                 <div class="image-box">
                     <figure class="image">
                         <a href="{{ note.file.url }}">
@@ -33,16 +37,21 @@
                         </a>
                     </figure>
                 </div>
+                {% endif %}
                 <div class="content-box">
                     <ul class="post-info">
                         <li><i class="fa fa-user"></i> by {{ note.user.get_full_name|default:'No Name'}}</li>
-                        <li><i class="fa fa-tag"></i> <a href="{{ note.unit_name.get_absolute_url }}">{{ note.unit_name }}</a>, <a href="{{ note.school.get_absolute_url }}">{{ note.school }}</a></li>
+                        <li><i class="fa fa-tag"></i> <a href="{{ note.unit_name.get_absolute_url }}">{{ note.unit_name }}</a>{% if note.school %}, <a href="{{ note.school.get_absolute_url }}">{{ note.school }}</a>{% endif %}</li>
                     </ul>
-                    <h4 class="title small"><a href="{{ note.file.url }}">{{ note }}</a></h4>
+                    
+                    <h4 class="title small"><a href="{% if note.file %}{{ note.file.url }}{% endif %}">{{ note }}</a></h4>
+
                 </div>
+                {% if note.file %}
                 <div class="bottom-box">
                     <a href="{{ note.file.url }}" class="read-more">View <i class="fa fa-long-arrow-alt-right"></i></a>
                 </div>
+                {% endif %}
             </div>
         </div>
         {% endfor %}
