--- a/templates/partials/map.html
+++ b/templates/partials/map.html
@@ -18,6 +18,28 @@
                         </ul>
                     </div>
                 </div>
+                <!-- Branch Block -->
+                <div class="branch-block col-lg-4 col-md-12 col-sm-12">
+                    <div class="inner-box">
+                        <h5 class="title">Nairobi, Kenya</h5>
+                        <ul class="info-list">
+                            <li><i class="fa fa-phone text-warning"></i> <a href="tel:+254748155432">+254748155432</a><br></li>
+                            <li><i class="fa fa-envelope text-warning"></i> <a href="mailto:o.joseph@vstech.co.ke">o.joseph@vstech.co.ke</a><br></li>
+                            <li><i class="fa fa-map-marker-alt text-warning"></i> RoyalTech, 5th Floor Rng Plaza, Ronald Ngala Street</li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Branch Block -->
+                <div class="branch-block col-lg-4 col-md-12 col-sm-12">
+                    <div class="inner-box">
+                        <h5 class="title">Rongo, Kenya</h5>
+                        <ul class="info-list">
+                            <li><i class="fa fa-phone text-warning"></i> <a href="tel:+254790193045">+254790193045</a><br></li>
+                            <li><i class="fa fa-envelope text-warning"></i> <a href="mailto:o.jeff@vstech.co.ke">o.jeff@vstech.co.ke</a><br></li>
+                            <li><i class="fa fa-map-marker-alt text-warning"></i> Eldacom Computers, Next to Mosache School, Riosir</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
